--- a/flex-box2.css
+++ b/flex-box2.css
@@ -1,17 +1,9 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box
-}
-
+@import url('global.css');
 
 .container {
-  
     margin: 15px;
-    display: flex;
-    flex-wrap: wrap;
     font-size: 17px;
-    font-family: Arial, sans-serif;
+    font-family: var(--font-family);
     font-weight: 600;
     gap:15px;
 }
@@ -21,31 +13,32 @@
 }
 
 header, footer, .div1, .div2, .top, .bottom {
-    border: 5px solid #000;
-    padding: 10px;
-   
-    
-    
+    border: 5px solid var(--black);
+    padding: 10px;  
 }
 .header {
     min-height: 80px;
 }
-.main, .main1 {
-    display: flex;
-    flex-wrap: wrap;
+.main, .main-sub-container-1 {
     gap: 15px;
 }
-.main1{
+.main-sub-container-1{
     flex: 2;
 }
 
-.main1 > div {
+.main-sub-container-1 > div {
     flex: 1;
 }
 
-.main2{
+.main-sub-container-2{
     flex: 1;
-    display: flex;
-    flex-direction: column;
     gap: 15px;
 }
+
+/* Responsive */
+@media (max-width: 600px) {
+  .main {
+    flex-direction: column;
+  }
+}
+
