--- a/flex-box3.css
+++ b/flex-box3.css
@@ -1,22 +1,18 @@
-* {
-    margin: 0   ;
-    padding: 0;
-    box-sizing: border-box;
-}
+@import url('global.css');
 
 .container {
     margin: 15px;
     font-size: 17px;
-    font-family: Arial, sans-serif;
+    font-family: var(--font-family);
     font-weight: 600;
     gap:15px;
-    border: 5px solid #000;
+    border: 5px solid var(--black);
 }
 
  header, footer, main {
-   padding: 10px;;
+   padding: 10px;
    margin: 10px;
-    border: 5px solid #000;
+    border: 5px solid var(--black);
 }
 header, footer {
     min-height: 80px;
@@ -24,31 +20,33 @@ header, footer {
 }
 
 main {
-    display: flex;
+    
     gap: 15px;
-    flex-wrap: wrap;
+   
    
 }
-.main1 {
+.main-sub {
     flex: 2;
-    display: flex;
-    flex-wrap: wrap;
     gap: 15px;
 }
-.main1 > div {
+.main-sub > div {
     flex: 1;
-    border: 5px solid #000;
+    border: 5px solid var(--black);
     padding: 10px;
     
 }
-.main2 {
+.main-mid {
     flex: 1;
-    display: flex;
-    flex-direction: column;
     gap: 15px;
 }
 .top, .bottom {
-    border: 5px solid #000;
+    border: 5px solid var(--black);
     padding: 10px;
     
+}
+/* Responsive */
+@media (max-width: 600px) {
+  main {
+    flex-direction: column;
+  }
 }
